releases/codestrands/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: codestrands
  labels:
    name: codestrands
