releases/codestrands/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codestrands-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codestrands-backend
      version: v1
  template:
    metadata:
      labels:
        app: codestrands-backend
        version: v1
    spec:
      containers:
      - image: ghcr.io/noodlecases/codestrands-backend:6ffc166
        imagePullPolicy: IfNotPresent
        name: codestrands-backend
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codestrands-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codestrands-frontend
      version: v1
  template:
    metadata:
      labels:
        app: codestrands-frontend
        version: v1
    spec:
      containers:
      - image: ghcr.io/noodlecases/codestrands-frontend:6ffc166
        imagePullPolicy: IfNotPresent
        name: codestrands-frontend
        ports:
        - containerPort: 3000
