releases/codestrands/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codestrands-backend
  labels:
    app: codestrands-backend
    service: codestrands-backend
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: codestrands-backend
---
apiVersion: v1
kind: Service
metadata:
  name: codestrands-frontend
  labels:
    app: codestrands-frontend
    service: codestrands-frontend
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 80
  selector:
    app: codestrands-frontend
