releases/codestrands/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http
spec:
  parentRefs:
  - name: gateway
    namespace: istio-ingress
  hostnames: ["codestrands.tech"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: codestrands-frontend
      port: 3000
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: codestrands-backend
      port: 8000
